# drtail-prompt

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  INTEGRATION.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: code-quality.yml  schema-release.yml
src/drtail_prompt/: __init__.py  cli.py  core.py  exception.py  schema.py  template.py
src/prompt/: __init__.py  core.py  exception.py  schema.py
tests/drtail_prompt/: _schema.py  test_cli.py  test_core.py
tests/drtail_prompt/data/: advanced.yaml  advanced_2.yaml  advanced_3.yaml  advanced_4.yaml  basic_1.yaml  basic_3.yaml  basic_error_1.yaml  basic_error_authors.yaml  basic_error_version.yaml  basic_newer_version.yaml  invalid_model_path.prompt.yaml  invalid_model_path.yaml
tests/drtail_prompt/integration/: test_openai.py
tests/prompt/: _schema.py  test_core.py
tests/prompt/data/: basic.yaml  basic_1.yaml  basic_2.yaml  basic_3.yaml  basic_newer_version.yaml  invalid_model_path.yaml
tests/prompt/integration/: test_openai.py
