[project]
name = "drtail-prompt"
version = "0.1.0"
description = "Prompt for DrTail"
readme = "README.md"
authors = [
    { name = "Humphrey Ahn", email = "ahnsv@bc.edu" }
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drtail_prompt"]

[dependency-groups]
dev = [
    "openai>=1.75.0",
    "pytest>=8.3.5",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E203",  # Whitespace before ':' (black compatibility)
    "E501",  # Line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["drtail_prompt"]

